--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "JATE",
+  "name": "text-client",
+  "private":"true",
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack --mode production",
