--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
     "description": "",
     "main": "server.js",
     "scripts": {
+        "heroku-prebuild": "npm install --dev",
+        "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+        "start": "npm run build & cd server && node server.js",    
         "server": "nodemon server.js --ignore client"
     },
     "keywords": [],
