--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "heroku-prebuild": "npm install --dev",
-    "start:dev": "webpack-dev-server",
-    "start": "webpack --watch",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+    "start": "cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
-    "build": "webpack --mode production",
-    "install": "concurrently \"cd client && npm install\" \"cd server && npm install\"",
-    "client": "cd client && npm start"
+    "build": "cd client && npm run build",
+    "install": "concurrently \"cd client && npm install\" \"cd server && npm install\" ",
+    "client": "cd client && npm start",
+    "heroku-prebuild": "npm install --dev"
   },
   "keywords": [],
   "author": "",
